samples/_failures_safe/1761489127_546c1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99932f22.c: In function ‘init_parser’:
./samples/SAFE/__tmp_99932f22.c:169:30: error: expected ‘;’ at end of input
  169 |     parser->current_token = 0
      |                              ^
      |                              ;
./samples/SAFE/__tmp_99932f22.c:169:5: error: expected declaration or statement at end of input
  169 |     parser->current_token = 0
      |     ^~~~~~
